--- a/style/flower.css
+++ b/style/flower.css
@@ -13,14 +13,36 @@ body {
     border-radius: 3px;
 }
 
-/* .banner-content{
+.banner{
+    padding: 0px 150px 0px 150px;
+    display: flex;
+    /* text-align: center; */
+    justify-content: space-between;
+}
 
-} */
+.banner .profil-pic{
+    width: 300px;
+    height: 350px;
+    padding-top: 0px;
+    
+}
+
+.banner-content{
+    max-width: 500px;
+    /* margin: 130px 730px 80px 150px; */
+}
 
 .banner-greating{
-
+    
+    font-size: 43px;
+    margin-bottom: 15px;
+    margin-right: 100px;
 }
 
 .banner-description{
+    color: #474747;
+    font-size: 11px;
+    margin-bottom: 15px;
+    margin-right: 115px;
 
 }
