--- a/style/flower.css
+++ b/style/flower.css
@@ -119,11 +119,11 @@ header{
 
 /* section 6 releted styles */
 .deals-many{
-    margin: 10px 150px 10px 150px;
-    padding: 80px 20px 50px 20px;
-    
+    margin: 50px 150px 10px 150px;
+    padding: 80px 20px 60px 20px;
     background-image: url('../images/Rectangle\ 9.png');
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .dealer{
@@ -131,10 +131,53 @@ header{
 }
 .latest-feals{
     font-size: 30px;
-    padding-top: 0px;
+    margin-bottom: 0px;
 }
 .maner{
     font-size: 10px;
     color: #757575;
-    padding-bottom: 0px;
+    margin-bottom: 20px;
+}
+
+.emailhere{
+    color: #757575;
+    font-size: 10px;
+    background-color: white;
+    padding: 9px 250px 9px 12px;
+    border: 0;
+    border-radius: 3px;
+    margin-right: 4px;
+
+}
+
+/* footer releted styles */
+
+footer{
+    background-color: black;
+}
+.shoper{
+     color: white;
+}
+
+.footer-item{
+    text-align: center;
+    padding: 50px 430px 80px 430px;
+    margin: 70px 0px 0px 0px;
+
+  
+}
+
+.footer-title{
+    font-size: 28px;
+    margin-bottom: 5px;
+}
+
+.footer-atim{
+    font-size: 10px;
+    color: rgb(202, 197, 197);
+}
+
+.footer-atimm{
+    font-size: 8px;
+    color: #757575;
 }
